--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
             <!-- Card Tugas 1 -->
             <div class="bg-gray-800 p-5 rounded-lg shadow-lg">
                 <h2 class="text-xl font-semibold">Tugas 1</h2>
-                <p class="text-gray-400">Deskripsi singkat tugas 1.</p>
+                <p class="text-gray-400">Bikin 6 post, isinya teks, gambar, embed, dll</p>
                 <a href="tugas1/Tugas1.html" class="btn btn-warning mt-3">Lihat Tugas</a>
             </div>
 
             <!-- Card Tugas 2 -->
             <div class="bg-gray-800 p-5 rounded-lg shadow-lg">
                 <h2 class="text-xl font-semibold">Tugas 2</h2>
-                <p class="text-gray-400">Deskripsi singkat tugas 2.</p>
+                <p class="text-gray-400">Website sederhana, yang penting ada Navbar sama jumbotron</p>
                 <a href="tugas2/index.html" class="btn btn-warning mt-3">Lihat Tugas</a>
             </div>
 
             <!-- Card Tugas 3 -->
             <div class="bg-gray-800 p-5 rounded-lg shadow-lg">
                 <h2 class="text-xl font-semibold">Tugas 3</h2>
-                <p class="text-gray-400">Deskripsi singkat tugas 3.</p>
+                <p class="text-gray-400">bikin website portofolio</p>
                 <a href="tugas3/index.html" class="btn btn-warning mt-3">Lihat Tugas</a>
             </div>
 
              <!-- Card Tugas 4 -->
              <div class="bg-gray-800 p-5 rounded-lg shadow-lg">
                 <h2 class="text-xl font-semibold">Tugas 4</h2>
-                <p class="text-gray-400">Deskripsi singkat tugas 4.</p>
+                <p class="text-gray-400">buat susunan 12 gambar pakai tailwind</p>
                 <a href="tugas4/index.html" class="btn btn-warning mt-3">Lihat Tugas</a>
             </div>
 
